--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iPadの写真を読み取り</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>写真読込機能付きサイト</title>
 </head>
 <body>
 	
@@ -16,5 +16,10 @@
     <!-- CDNの読み込み -->
 	 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2/dist/tesseract.min.js">
 	 </script>
+
+	<h1>写真読込機能付きサイト</h1>
+  	<input type="file" id="file-input">
+ 	<button id="upload-button">アップロード</button>
+ 	<div id="result"></div>
 </body>
 </html>
